# reasoning-scaling

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: base.yaml  grpo.yaml  inference.yaml  sft.yaml
data/manifests/: data_stats.json
docs/reports/: stage1_report.md  stage2_report.md  stage3_report.md  stage4_report.md  stage5_report.md  stage6_report.md
docs/thesis/: 01.04.02__Задание_на_ВКР.docx  EXPERIMENT_PARAMS.md  FLOPS_METHODOLOGY.md  FLOPS_METHODOLOGY.txt  README.md  STRATEGY.md  STRATEGY.txt  Колотий_МП_ВКР_промежуточный.docx  Колотий_МП_ВКР_промежуточный_.docx  Параметры эксперимента.docx
notebook/: 00_setup.ipynb  01_data_prep.ipynb  02_sft.ipynb  03_grpo.ipynb  04_inference.ipynb  05_analysis.ipynb
notebooks/: 00_setup.ipynb  01_data_prep.ipynb  02_sft.ipynb  03_grpo.ipynb  04_inference.ipynb  05_analysis.ipynb
results/baselines/: baseline.json  dedup_log.json
results/inference/: inference_results.json
results/sft/: c2048_v500_s42.json
rscaling/: __init__.py  analysis.py  evaluate.py  flops.py  grpo.py  inference.py  parsing.py  runner.py  sft.py
