[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rscaling"
version = "0.1.0"
description = "Comparative analysis of reasoning improvement methods for compact LLMs"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "transformers==4.57.6",
    "peft>=0.10",
    "trl>=1.1.0",
    "datasets>=2.18",
    "accelerate>=0.28",
    "pyyaml>=6.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "scipy>=1.10",
]

[tool.setuptools.packages.find]
include = ["rscaling*"]
